@@ -8,6 +8,7 @@ Date: ????
       ► Rocketizer
     - Made nicer debug functions.
     - Trashsteroid speed now fluctuates (it was supposed to before)
+    - Bugfix for players being removed from multiplayer games (reported by DoubleThought).
 ---------------------------------------------------------------------------------------------------
 Version: 0.69.81
 Date: 2025-07-12
